--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "editor.codeLens": false,
+    "editor.hover.enabled": false,
+    "editor.hover.above": false
 }
